[gd_scene load_steps=8 format=3 uid="uid://yxwsbsmxi7h"]

[ext_resource type="Script" uid="uid://bsaii3m02jc37" path="res://scripts/panfleto.gd" id="1_lwcvo"]
[ext_resource type="Texture2D" uid="uid://d37hsdfj4g2kr" path="res://assets/panfleto.png" id="2_y7y5s"]
[ext_resource type="AudioStream" uid="uid://bni8y832tvbv7" path="res://sounds/fala 1.mp3" id="3_sxwcs"]
[ext_resource type="AudioStream" uid="uid://dxwmfjgnrnl6g" path="res://sounds/fala 2.mp3" id="4_yc8af"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbs73"]
bg_color = Color(0.156863, 0.219608, 0.32549, 0.501961)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1af0d"]
size = Vector2(53.5158, 83.6319)

[sub_resource type="LabelSettings" id="LabelSettings_j76b0"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="Panfleto" type="Area2D"]
script = ExtResource("1_lwcvo")

[node name="SpritePanfleto" type="Sprite2D" parent="."]
position = Vector2(2.86102e-06, -18.75)
scale = Vector2(0.0546875, 0.0546875)
texture = ExtResource("2_y7y5s")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="caixa_dialogo" type="Label" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 454.0
offset_right = 1124.0
offset_bottom = 604.0
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxFlat_xbs73")
vertical_alignment = 1
autowrap_mode = 2

[node name="texto_dialogo" type="Label" parent="CanvasLayer"]
offset_left = 63.0
offset_top = 467.0
offset_right = 1084.0
offset_bottom = 587.0
theme_override_font_sizes/font_size = 20
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="CollisionInterecao" type="CollisionShape2D" parent="."]
position = Vector2(3.02401e-06, 11)
rotation = -3.14159
scale = Vector2(1.75649, -0.597858)
shape = SubResource("RectangleShape2D_1af0d")

[node name="label_interacao" type="Label" parent="."]
offset_left = -64.0
offset_top = -74.0
offset_right = 65.0
offset_bottom = -51.0
text = "Pressione 'E' para interagir"
label_settings = SubResource("LabelSettings_j76b0")

[node name="fala1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_sxwcs")

[node name="fala2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yc8af")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
